fix: align AIP integrations preview spacing

--- a/src/components/sections/aip-integrations-page.module.css
+++ b/src/components/sections/aip-integrations-page.module.css
@@ -9,8 +9,8 @@
 }
 
 .heroSection {
-  padding-top: 80px;
-  padding-bottom: 100px;
+  padding-top: 168px;
+  padding-bottom: 90px;
 }
 
 .heroContent {
